# Y2Kmeter

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  MACOS_ADAPTATION_DIFFS.md  PROJECT_OVERVIEW.md  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  RELEASE_NOTES_v1.8.md  Y2Kmeter_installer.iss  build_installer.bat  build_macos_installer.sh  cmake_mac_snapshot.txt.tmp  y2k_app_diff.txt.tmp
assets/: app_icon.rc
scripts/: macos_dmg_background.m  macos_iconize.m  macos_iconize.swift
source/analysis/: AnalyserHub.cpp  AnalyserHub.h  DynamicRangeMeter.cpp  LoudnessMeter.cpp  LoudnessMeter.h  PhaseCorrelator.cpp
source/perf/: PerformanceCounterSystem.cpp  PerformanceCounterSystem.h
source/standalone/: AudioDumpRecorder.cpp  AudioDumpRecorder.h  MacDesktopAudioCapture.h  MacDesktopAudioCapture.mm  WasapiLoopbackCapture.cpp  WasapiLoopbackCapture.h  Y2KStandaloneApp.cpp
source/ui/: ModulePanel.cpp  ModulePanel.h  ModuleWorkspace.cpp  ModuleWorkspace.h  PinkXPStyle.cpp  PinkXPStyle.h  UiFrameClock.cpp  UiFrameClock.h
source/ui/modules/: DynamicsModule.cpp  DynamicsModule.h  EqModule.cpp  EqModule.h  FineSplitModules.cpp  FineSplitModules.h  LoudnessModule.cpp  LoudnessModule.h  MilkdropModule.cpp  MilkdropModule.h  OscilloscopeModule.cpp  OscilloscopeModule.h  OscilloscopeWaveModule.cpp  OscilloscopeWaveModule.h  PhaseModule.cpp  PhaseModule.h  ProjectMApi.cpp  ProjectMApi.h  Spectrogram3DModule.cpp  Spectrogram3DModule.h  SpectrogramModule.cpp  SpectrogramModule.h  SpectrumModule.cpp  SpectrumModule.h  TamagotchiModule.cpp  TamagotchiModule.h  WaveformModule.cpp  WaveformModule.h
tools/tamagotchi_cutter/: egg_cut.xlsx  role_cut.xlsx
